Re-upload of https://codereview.chromium.org/1673183002/.
Enable H.264 video WebRTC behind run-time flag and add
WebRtcBrowserTest for H.264.

The compile flag |rtc_use_h264| defaults to
|proprietary_codecs| which is used on some Chromium bots
and in the official Chrome build. The new run-time flag
|kWebRtcH264WithOpenH264FFmpeg| determines if the
|rtc_use_h264| encoder/decoder will be used at runtime.

The run-time flag is off by default.

This CL:
- Adds run-time flag and a new build target for it. It is
placed in content/public/common/ because it
can't/shouldn't be placed in the webrtc repo and
peer_connection_dependency_factory.cc lives in
content/renderer/media/webrtc/.
- Moves renderer_features and its generated header file
target from content/renderer/ to content/public/common/
to not break include rules and renames it to
common_features.
- Based on the run-time flag, enables or disables H.264
in peer_connection_dependency_factory.cc.
- If flag is on, runs a new H.264 browser test.

BUG=chromium:500605, chromium:468365

Review URL: https://codereview.chromium.org/1718883002

Cr-Commit-Position: refs/heads/master@{#377556}

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -876,6 +876,7 @@ if (!is_android) {
       "//components/safe_browsing_db:test_database_manager",
       "//components/strings",
       "//components/translate/core/common",
+      "//content/public/common:features",
       "//content/test:browsertest_base",
       "//crypto:platform",
       "//crypto:test_support",
@@ -1087,7 +1088,9 @@ if (!is_android) {
     if (enable_captive_portal_detection) {
       sources += [ "../browser/captive_portal/captive_portal_browsertest.cc" ]
     }
-    if (!enable_webrtc) {
+    if (enable_webrtc) {
+      deps += [ "//content/public/common:feature_h264_with_openh264_ffmpeg" ]
+    } else {
       sources -= [
         "../browser/extensions/api/webrtc_audio_private/webrtc_audio_private_browsertest.cc",
         "../browser/extensions/api/webrtc_logging_private/webrtc_logging_private_apitest.cc",
