--- a/content/renderer/BUILD.gn
+++ b/content/renderer/BUILD.gn
@@ -4,10 +4,8 @@
 
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
-import("//build/buildflag_header.gni")
 import("//content/renderer/renderer.gni")
 import("//media/media_options.gni")
-import("//third_party/webrtc/build/webrtc.gni")
 
 source_set("renderer") {
   # Only the public target should depend on this. All other targets (even
@@ -26,7 +24,6 @@ source_set("renderer") {
   defines = []
 
   deps = [
-    ":renderer_features",
     "//base:i18n",
     "//cc",
     "//cc/blink",
@@ -40,6 +37,8 @@ source_set("renderer") {
     "//content/common:mojo_bindings",
     "//content/public/child:child_sources",
     "//content/public/common:common_sources",
+    "//content/public/common:feature_h264_with_openh264_ffmpeg",
+    "//content/public/common:features",
     "//content/public/common:mojo_bindings",
     "//crypto:platform",
     "//device/battery:mojo_bindings",
@@ -243,10 +242,4 @@ source_set("renderer") {
   if (use_ozone) {
     deps += [ "//ui/ozone" ]
   }
-}
-
-buildflag_header("renderer_features") {
-  header = "renderer_features.h"
-
-  flags = [ "RTC_USE_H264=$rtc_use_h264" ]
 }
