[NTP Snippets] Schedule periodic fetching
BUG=586452

Review URL: https://codereview.chromium.org/1699143002

Cr-Commit-Position: refs/heads/master@{#377581}

--- a/chrome/android/java/AndroidManifest.xml
+++ b/chrome/android/java/AndroidManifest.xml
@@ -579,8 +579,8 @@ by a child template that "extends" this file.
             </intent-filter>
         </receiver>
 
-        <!-- Service Worker Background Sync GCM scheduler task -->
-        <service android:name="org.chromium.chrome.browser.BackgroundSyncLauncherService"
+        <!-- GcmTaskService implementation to wake Chrome on scheduled events -->
+        <service android:name="org.chromium.chrome.browser.ChromeBackgroundService"
             android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE"
             android:exported="true">
             <intent-filter>
