Add /ios_internal to .gitignore.
Chrome on iOS downstream repository is moving to rolling Chromium. This
requires /ios_internal to be ignored in Chromium repository to work
properly.

BUG=589511
R=rohitrao@chromium.org

Review URL: https://codereview.chromium.org/1734743005 .

Cr-Commit-Position: refs/heads/master@{#377587}

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,7 @@ vs-chromium-project.txt
 /ios/third_party/fishhook/src
 /ios/third_party/gcdwebserver/src
 /ios/third_party/ochamcrest/src
+/ios_internal
 /llvm
 /media/cast/logging/cast_logging_proto_lib.xml
 /media/cdm/api
