Add a cross-thread wrapper around Android Webview's CookieStore.
Android Webview needs to be able to call into its CookieStore on a
thread other than the IOThread. Since we're trying to make the
CookieStore non-threadsafe, that means we need a CookieStore wrapper
to be used by the network stack to access the real CookieStore on
another thread.

This CL also modifies CookieManager to lazily create the CookieStore
on the correct thread.  This both allows us to get rid of the
last GetCookieMonster call, and will make making the CookieStore
non-thread-safe easier.

BUG=579653, 579260

Review URL: https://codereview.chromium.org/1693903002

Cr-Commit-Position: refs/heads/master@{#377596}

--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -446,6 +446,8 @@ source_set("common") {
     "browser/jni_dependency_factory.h",
     "browser/net/android_stream_reader_url_request_job.cc",
     "browser/net/android_stream_reader_url_request_job.h",
+    "browser/net/aw_cookie_store_wrapper.cc",
+    "browser/net/aw_cookie_store_wrapper.h",
     "browser/net/aw_http_user_agent_settings.cc",
     "browser/net/aw_http_user_agent_settings.h",
     "browser/net/aw_network_change_notifier.cc",
