Convert enable_background to new-style build flag.
This flag is only used in a cople of places at the Chrome layer. Remove it from the shared build files.

BUG=589674

Review URL: https://codereview.chromium.org/1739543002

Cr-Commit-Position: refs/heads/master@{#377651}

--- a/chrome/common/features.gni
+++ b/chrome/common/features.gni
@@ -25,7 +25,11 @@ declare_args() {
 
 enable_one_click_signin = is_win || is_mac || (is_linux && !is_chromeos)
 
+# Enables support for background apps.
+enable_background = !is_ios && !is_android
+
 chrome_grit_defines = [
+  "enable_background=$enable_background",
   "enable_google_now=$enable_google_now",
   "use_vulcanize=$use_vulcanize",
 ]
