Clean-up DEPS related to components/test_runner.
DEPS before this CL:
  $ find content -name DEPS | xargs grep test_runner
  content/shell/common/DEPS:  "+components/test_runner",
  content/shell/app/DEPS:  "+components/test_runner",
  content/shell/DEPS:  "+components/test_runner/layout_dump_flags.h",  # POD only.
  content/shell/renderer/DEPS:  "+components/test_runner",
  content/shell/browser/layout_test/DEPS:  "+components/test_runner",
  content/test/DEPS:    "+components/test_runner",

The dependencies specified in content/shell/browser/layout_test/DEPS and in
content/shell/common/DEPS were not needed and can be removed.

The dependency in content/shell/app/DEPS was only for
components/test_runner/blink_test_platform_support.h.  Since the
functions provided by blink_test_platform_support* were only used by
content/shell/app/shell_main_delegate.cc, the files were moved into
content/shell/app/ (which allows to remove the content/shell/all ->
components/test_runner dependency).

The dependency in content/test/DEPS is still needed -
content/test/layouttest_support.cc depends on:
- components/test_runner/test_common.h
- components/test_runner/web_frame_test_proxy.h
- components/test_runner/web_test_proxy.h

The dependency from content/shell/renderer is obviosly needed.

The dependency on components/test_runner/layout_dump_flags.h is ok, because
this header defines a POD-only struct.

BUG=587175

Review URL: https://codereview.chromium.org/1730303002

Cr-Commit-Position: refs/heads/master@{#377672}

--- a/content/shell/BUILD.gn
+++ b/content/shell/BUILD.gn
@@ -34,6 +34,11 @@ static_library("content_shell_lib") {
     "android/shell_jni_registrar.h",
     "android/shell_manager.cc",
     "android/shell_manager.h",
+    "app/blink_test_platform_support.h",
+    "app/blink_test_platform_support_android.cc",
+    "app/blink_test_platform_support_linux.cc",
+    "app/blink_test_platform_support_mac.mm",
+    "app/blink_test_platform_support_win.cc",
     "app/paths_mac.h",
     "app/paths_mac.mm",
     "app/shell_crash_reporter_client.cc",
