Fix cc_blink_unittests link errors in static GN builds after r377586.
BUG=561879
TBR=yukishiino@chromium.org

Review URL: https://codereview.chromium.org/1737873002 .

Cr-Commit-Position: refs/heads/master@{#377688}

--- a/cc/blink/BUILD.gn
+++ b/cc/blink/BUILD.gn
@@ -46,7 +46,7 @@ component("blink") {
     "//base/third_party/dynamic_annotations",
     "//cc",
     "//gpu",
-    "//third_party/WebKit/public:blink",
+    "//third_party/WebKit/public:blink_for_unittests",
     "//ui/gfx",
     "//ui/gfx/geometry",
   ]
