network_time_tracker: detect clock changes.
Try to notice when a suspend+resume event happens, or when the wall
clock is updated, by tracking both the wall clock and the tick clock,
and checking them against each other.

In passing, two other small changes:

- Remove the |TimeTicks| parameter to |GetNetworkTime|.  The ability to
  get network time corresponding to a real time other than the present
  is unused, and we can add it back if we need it.

- Serialize all the state to a pref.  Previously, the uncertainty had
  been omitted.

BUG=589646

Review URL: https://codereview.chromium.org/1718273003

Cr-Commit-Position: refs/heads/master@{#377707}

--- a/components/network_time/BUILD.gn
+++ b/components/network_time/BUILD.gn
@@ -26,6 +26,7 @@ source_set("unit_tests") {
   deps = [
     ":network_time",
     "//base",
+    "//base/test:test_support",
     "//components/prefs:test_support",
     "//testing/gtest",
   ]
