--- a/tools/android/eclipse/.classpath
+++ b/tools/android/eclipse/.classpath
@@ -50,6 +50,7 @@ to the classpath for downstream development. See "additional_entries" below.
     <classpathentry kind="src" path="components/web_contents_delegate_android/android/java/src"/>
     <classpathentry kind="src" path="content/public/android/java/src"/>
     <classpathentry kind="src" path="content/public/android/javatests/src"/>
+    <classpathentry kind="src" path="content/public/android/junit/src"/>
     <classpathentry kind="src" path="content/public/test/android/javatests/src"/>
     <classpathentry kind="src" path="content/shell/android/browsertests/src"/>
     <classpathentry kind="src" path="content/shell/android/browsertests_apk/src"/>
