media: Pass InterfaceProvider to mojo media factories.
Previously Mojo{Renderer|Cdm}Factory takes a raw pointer to the
ServiceFactory. However, if the MojoMediaApplication is terminated
unexpected (e.g. the process that hosts the application crashed), the
ServiceFactory will be disconnected. This means that all operations on
the ServiceFactory will be a no-op and therefore we will not be able to
create any Renderer or CDM using it in this render frame.

This CL updates Mojo{Renderer|Cdm}Factory to take an InterfaceProvider,
which is implemented by MediaInterfaceProvider that handles app
connection error internally. Upon app connection error, the next time we
try to use any service we'll reconnect the ServiceFactory which could
cause to relaunch the app and/or the process. This CL also makes it
easier to remove ServiceFactory entirely (issue 580186).

Here's the manually test I did to verify this:
1. Build a GN build with
        enable_mojo_media = true
        mojo_media_host = "gpu"
        mojo_media_services = ["cdm"]
2. Launch chrome, load a page, and create a MediaKeys in that page.
3. Note that MediaKeys is created successfully (the CDM is in the GPU
   process).
4. Manually kill the GPU process.
5. Repeat (2).

Result w/o this CL: The MediaKeys creation promise is always pending.
Result with this CL: The MediaKeys is created successfully again.

BUG=560465, 510653, 580186
TEST=See test steps above.

Review URL: https://codereview.chromium.org/1716323002

Cr-Commit-Position: refs/heads/master@{#377738}

--- a/content/renderer/BUILD.gn
+++ b/content/renderer/BUILD.gn
@@ -220,6 +220,11 @@ source_set("renderer") {
   }
 
   if (enable_mojo_media) {
+    sources += [
+      "media/media_interface_provider.cc",
+      "media/media_interface_provider.h",
+    ]
+
     deps += [
       "//media/mojo/interfaces",
       "//media/mojo/services:proxy",
