--- a/components/sync_driver/BUILD.gn
+++ b/components/sync_driver/BUILD.gn
@@ -74,6 +74,8 @@ source_set("sync_driver") {
     "non_blocking_data_type_controller.h",
     "non_ui_data_type_controller.cc",
     "non_ui_data_type_controller.h",
+    "non_ui_model_type_controller.cc",
+    "non_ui_model_type_controller.h",
     "pref_names.cc",
     "pref_names.h",
     "profile_sync_auth_provider.cc",
@@ -116,6 +118,8 @@ source_set("sync_driver") {
     "system_encryptor.h",
     "ui_data_type_controller.cc",
     "ui_data_type_controller.h",
+    "ui_model_type_controller.cc",
+    "ui_model_type_controller.h",
     "user_selectable_sync_type.h",
   ]
 
@@ -214,8 +218,8 @@ source_set("unit_tests") {
     "glue/ui_model_worker_unittest.cc",
     "local_device_info_provider_unittest.cc",
     "model_association_manager_unittest.cc",
-    "non_blocking_data_type_controller_unittest.cc",
     "non_ui_data_type_controller_unittest.cc",
+    "non_ui_model_type_controller_unittest.cc",
     "profile_sync_auth_provider_unittest.cc",
     "shared_change_processor_unittest.cc",
     "startup_controller_unittest.cc",
@@ -224,6 +228,7 @@ source_set("unit_tests") {
     "sync_util_unittest.cc",
     "system_encryptor_unittest.cc",
     "ui_data_type_controller_unittest.cc",
+    "ui_model_type_controller_unittest.cc",
   ]
   deps = [
     ":test_support",
