Apply a new FillLayout to mash root window and containers.
Add a new FillLayout that sizes windows to fill their owners.
Set FillLayout on the root window and its containers (by default).
Still apply custom LayoutManager subclasses to certain containers.

BUG=557406
TEST=Mash shelf (and others?) layout on root window bounds changes.
R=sky@chromium.org

Review URL: https://codereview.chromium.org/1739043003

Cr-Commit-Position: refs/heads/master@{#377765}

--- a/mash/wm/BUILD.gn
+++ b/mash/wm/BUILD.gn
@@ -21,6 +21,8 @@ source_set("lib") {
     "accelerator_registrar_impl.h",
     "background_layout.cc",
     "background_layout.h",
+    "fill_layout.cc",
+    "fill_layout.h",
     "frame/caption_buttons/caption_button_types.h",
     "frame/caption_buttons/frame_caption_button.cc",
     "frame/caption_buttons/frame_caption_button.h",
