--- a/build_overrides/build.gni
+++ b/build_overrides/build.gni
@@ -3,7 +3,9 @@
 # found in the LICENSE file.
 
 # See https://bugs.chromium.org/p/webrtc/issues/detail?id=5453.
-# Some WebRTC targets require the 10.7 deployment version of the Mac SDK,
-# but those targets are only used in non-Chromium builds. We can remove
-# this when Chromium drops 10.6 support and also requires 10.7.
+# Some WebRTC targets require the 10.7 deployment version of the Mac SDK
+# and a 10.11 min SDK, but those targets are only used in non-Chromium
+# builds. We can remove this when Chromium drops 10.6 support and also
+# requires 10.7.
+mac_sdk_min_build_override = "10.10"
 mac_deployment_target_build_override = "10.6"
