--- a/ui/file_manager/file_manager/manifest.json
+++ b/ui/file_manager/file_manager/manifest.json
@@ -44,6 +44,7 @@
     "storage",
     "syncFileSystem",
     "unlimitedStorage",
+    "wallpaper",
     "webstoreWidgetPrivate",
     "webview"
   ],
