Revert of Mojo C++ bindings: remove usage of MojoAsyncWaiter from mojo/public/cpp/bindings (patchset #5 id:80001 of https://codereview.chromium.org/1718363002/ )
Reason for revert:
This causes crashes: https://bugs.chromium.org/p/chromium/issues/detail?id=589964

The shell and the application belong to different modules, so they have different MessageLoop::current() / MessagePumpMojo::current() / etc. Although these values are in thread-local storage, we refer to them using global variables which are different in different modules.

Original issue's description:
> Mojo C++ bindings: remove usage of MojoAsyncWaiter from mojo/public/cpp/bindings
>
> BUG=585942
>
> Committed: https://crrev.com/cb97b6a175c61a3538d724f1214d537b40df573a
> Cr-Commit-Position: refs/heads/master@{#377652}

TBR=jam@chromium.org,darin@chromium.org
# Skipping CQ checks because original CL landed less than 1 days ago.
NOPRESUBMIT=true
NOTREECHECKS=true
NOTRY=true
BUG=585942

Review URL: https://codereview.chromium.org/1735283003

Cr-Commit-Position: refs/heads/master@{#377817}

--- a/mojo/public/cpp/bindings/BUILD.gn
+++ b/mojo/public/cpp/bindings/BUILD.gn
@@ -98,7 +98,7 @@ source_set("bindings") {
 
   deps = [
     "//base",
-    "//mojo/message_pump",
+    "//mojo/public/cpp/environment",
     "//mojo/public/interfaces/bindings:bindings_cpp_sources",
   ]
 }
