--- a/device/bluetooth/BUILD.gn
+++ b/device/bluetooth/BUILD.gn
@@ -89,6 +89,8 @@ component("bluetooth") {
     "bluetooth_low_energy_win.h",
     "bluetooth_remote_gatt_characteristic_android.cc",
     "bluetooth_remote_gatt_characteristic_android.h",
+    "bluetooth_remote_gatt_characteristic_win.cc",
+    "bluetooth_remote_gatt_characteristic_win.h",
     "bluetooth_remote_gatt_descriptor_android.cc",
     "bluetooth_remote_gatt_descriptor_android.h",
     "bluetooth_remote_gatt_service_android.cc",
