Don't run build_deb.py on Windows GN
Otherwise:

gn gen //out/Debug "--args=is_debug=true is_component_build=true enable_nacl=false is_chrome_branded=true symbol_level=2 target_cpu=\"x86\"" --check
Traceback (most recent call last):
  File "d:/src/cr3/src/remoting/host/installer/linux/build_deb.py", line 22, in <module>
    sys.exit(main())
  File "d:/src/cr3/src/remoting/host/installer/linux/build_deb.py", line 15, in main
    stdout=subprocess.PIPE)
  File "d:\src\depot_tools\python276_bin\lib\subprocess.py", line 709, in __init__
    errread, errwrite)
  File "d:\src\depot_tools\python276_bin\lib\subprocess.py", line 957, in _execute_child
    startupinfo)
WindowsError: [Error 193] %1 is not a valid Win32 application
ERROR at //remoting/host/BUILD.gn:878:32: Script returned non-zero exit code.
          "$root_build_dir/" + exec_script(build_deb_script,
                               ^----------
Current dir: d:/src/cr3/src/out/Debug/
Command: d:/src/depot_tools/python276_bin/python.exe -- d:/src/cr3/src/remoting/host/installer/linux/build_deb.py -p -s d:/src/cr3/src/
Returned 1.

BUG=600789

Review URL: https://codereview.chromium.org/1864683002

Cr-Commit-Position: refs/heads/master@{#385265}

--- a/remoting/host/BUILD.gn
+++ b/remoting/host/BUILD.gn
@@ -868,7 +868,7 @@ if (is_mac) {  # TODO(GYP) Mac build of remoting host.
       }
     }
 
-    if (is_chrome_branded && enable_me2me_host && !is_chromeos) {
+    if (is_chrome_branded && enable_me2me_host && is_linux && !is_chromeos) {
       # TODO(GYP): add support for archive_chromoting_tests variable?
 
       import("//build/config/zip.gni")
