--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1031,6 +1031,7 @@ chrome_test_java_sources = [
   "javatests/src/org/chromium/chrome/browser/identity/SettingsSecureBasedIdentificationGeneratorTest.java",
   "javatests/src/org/chromium/chrome/browser/identity/UniqueIdentificationGeneratorFactoryTest.java",
   "javatests/src/org/chromium/chrome/browser/identity/UuidBasedUniqueIdentificationGeneratorTest.java",
+  "javatests/src/org/chromium/chrome/browser/incognito/IncognitoNotificationServiceTest.java",
   "javatests/src/org/chromium/chrome/browser/infobar/InfoBarContainerTest.java",
   "javatests/src/org/chromium/chrome/browser/infobar/InfoBarControlLayoutTest.java",
   "javatests/src/org/chromium/chrome/browser/infobar/InfoBarDualControlLayoutTest.java",
