[Cronet] Add missing test file to BUILD.gn
TBR=mef@chromium.org

Review URL: https://codereview.chromium.org/1864723002

Cr-Commit-Position: refs/heads/master@{#385273}

--- a/components/cronet/android/BUILD.gn
+++ b/components/cronet/android/BUILD.gn
@@ -569,6 +569,7 @@ android_library("cronet_javatests") {
   testonly = true
 
   java_files = [
+    "test/javatests/src/org/chromium/net/BidirectionalStreamQuicTest.java",
     "test/javatests/src/org/chromium/net/BidirectionalStreamTest.java",
     "test/javatests/src/org/chromium/net/ChromiumUrlRequestTest.java",
     "test/javatests/src/org/chromium/net/ChunkedWritableByteChannelTest.java",
