Convert the utility process image decoder into a Mojo service.
BUG=597124

Review URL: https://codereview.chromium.org/1844103004

Cr-Commit-Position: refs/heads/master@{#385278}

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -378,6 +378,7 @@ source_set("browser") {
       "//mojo/shell/public/cpp",
       "//net:extras",
       "//net:net_with_v8",
+      "//skia/public",
       "//storage/browser",
       "//storage/common",
       "//third_party/WebKit/public:image_resources",
