Rename bookmark widget to "Chromium Bookmarks".
BUG=593587

Review URL: https://codereview.chromium.org/1863683002

Cr-Commit-Position: refs/heads/master@{#385290}

--- a/chrome/android/java/AndroidManifest.xml
+++ b/chrome/android/java/AndroidManifest.xml
@@ -546,7 +546,7 @@ by a child template that "extends" this file.
 
         <!-- Bookmarks widget -->
         <receiver android:name="com.google.android.apps.chrome.appwidget.bookmarks.BookmarkThumbnailWidgetProvider"
-            android:label="@string/bookmarks">
+            android:label="@string/bookmark_widget_title">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name=".BOOKMARK_APPWIDGET_UPDATE" />
