--- a/remoting/host/BUILD.gn
+++ b/remoting/host/BUILD.gn
@@ -292,6 +292,7 @@ if (is_mac) {  # TODO(GYP) Mac build of remoting host.
       "security_key/gnubby_extension_session_unittest.cc",
       "security_key/remote_security_key_ipc_client_unittest.cc",
       "security_key/remote_security_key_ipc_server_unittest.cc",
+      "security_key/remote_security_key_message_handler_unittest.cc",
       "security_key/remote_security_key_message_reader_impl_unittest.cc",
       "security_key/remote_security_key_message_writer_impl_unittest.cc",
       "server_log_entry_host_unittest.cc",
