Set keyboard layout in MUS.
The keyboard layout needs to be set when running mash on device
otherwise key input events are broken. It looks like this is normally
done as part of login, so set a US keyboard layout until we've got login
working.

BUG=600809

Review URL: https://codereview.chromium.org/1864713002

Cr-Commit-Position: refs/heads/master@{#385307}

--- a/components/mus/BUILD.gn
+++ b/components/mus/BUILD.gn
@@ -95,6 +95,7 @@ source_set("lib") {
     "//mojo/services/tracing/public/cpp",
     "//mojo/shell/public/cpp",
     "//ui/events",
+    "//ui/events/ozone:events_ozone_layout",
     "//ui/gl:gl",
     "//ui/platform_window:platform_impls",
     "//ui/platform_window:platform_window",
