Mojo: Generate Java mojom targets when !cpp_only.
Previously, Java mojom targets were generated unless a variant was
specified or typemaps were used. However, Java mojom targets should be
generated for the default variant regardless of whether typemaps are
used. This cl fixes this by switching on the same variable as all the
other decisions for whether to generate Java bindings.

BUG=596202

Review URL: https://codereview.chromium.org/1852163002

Cr-Commit-Position: refs/heads/master@{#385324}

--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -263,7 +263,7 @@ template("mojom") {
     }
   }
 
-  if (is_android && !defined(invoker.variant) && !defined(invoker.typemaps)) {
+  if (is_android && !cpp_only) {
     import("//build/config/android/rules.gni")
 
     java_srcjar_target_name = target_name + "_java_sources"
