--- a/content/public/gpu/BUILD.gn
+++ b/content/public/gpu/BUILD.gn
@@ -24,6 +24,8 @@ source_set("gpu_sources") {
 
   sources = [
     "content_gpu_client.h",
+    "gpu_video_decode_accelerator_factory.cc",
+    "gpu_video_decode_accelerator_factory.h",
   ]
 
   deps = [
@@ -31,6 +33,9 @@ source_set("gpu_sources") {
     "//content:export",
     "//content/gpu:gpu_sources",
     "//content/public/common:common_sources",
+    "//gpu/command_buffer/service",
+    "//gpu/config",
+    "//media:media",
   ]
 
   allow_circular_includes_from = [ "//content/gpu:gpu_sources" ]
