[chromecast] Bind and run mojo media services on cma thread.
BUG=594234

Review URL: https://codereview.chromium.org/1854893002

Cr-Commit-Position: refs/heads/master@{#385392}

--- a/chromecast/browser/media/BUILD.gn
+++ b/chromecast/browser/media/BUILD.gn
@@ -18,6 +18,8 @@ source_set("media") {
 
   if (mojo_media_host == "browser") {
     sources += [
+      "cast_mojo_media_application.cc",
+      "cast_mojo_media_application.h",
       "cast_mojo_media_client.cc",
       "cast_mojo_media_client.h",
       "cast_renderer.cc",
@@ -31,7 +33,9 @@ source_set("media") {
 
   if (mojo_media_host == "browser") {
     public_deps = [
+      "//media/mojo/interfaces",
       "//media/mojo/services:application",
+      "//mojo/shell/public/cpp",
     ]
   }
 
