Store standalone web app data in WebappDataStorage as well as the homescreen intent.
Homescreen launch intents for standalone web apps on Android contain
several properties which WebappActivity requires to launch the app in
the web frame (e.g. icon, names, theme/background color). This structure
means that launching webapps from sources other than the homescreen
(e.g. a notification) won't work. The root problem is that Android does
not have an API for querying shortcuts on the home screen after they
have been added.

This CL mirrors the homescreen intent data into Android Shared
Preferences via WebappDataStorage, and refactors how homescreen launch
intents for standalone apps are created. Standalone web apps added to
homescreen before this CL will have their data copied into a
WebappDataStorage when they are next launched. A new scope field is
computed from the URL to identify the URLs over which a web app may
control. This CL enables Chrome to launch a web app to standalone
mode without the homescreen intent.

The semantics of WebappDataStorage have also changed. Now, the only
correct way to access a WebappDataStorage is via the WebappRegistry.
New methods to access storage objects have been added to the registry,
and all clients should use these.

The existing WebappDataStorage expiry mechanism is maintained in this
CL, ensuring that web apps which have not been launched recently will
have their stored data removed. Additionally, URLs, scopes, and last
access times are purged when the user clears history.

Additional and updated tests for this functionality are also added.

BUG=594872

Review URL: https://codereview.chromium.org/1845233002

Cr-Commit-Position: refs/heads/master@{#385402}

--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -258,6 +258,7 @@ java_cpp_template("resource_id_javagen") {
 # GYP: //chrome/chrome_tests.gypi:chrome_junit_tests
 junit_binary("chrome_junit_tests") {
   java_files = [
+    "junit/src/org/chromium/chrome/browser/ShortcutHelperTest.java",
     "junit/src/org/chromium/chrome/browser/SSLClientCertificateRequestTest.java",
     "junit/src/org/chromium/chrome/browser/crash/LogcatExtractionCallableTest.java",
     "junit/src/org/chromium/chrome/browser/bookmarks/BookmarkModelUnitTest.java",
