--- a/ui/views/BUILD.gn
+++ b/ui/views/BUILD.gn
@@ -191,7 +191,10 @@ source_set("test_support_internal") {
     deps += [ "//ui/gfx/x" ]
   }
   if (use_ozone || !use_x11) {
-    sources -= [ "test/x11_property_change_waiter.cc" ]
+    sources -= [
+      "test/x11_property_change_waiter.cc",
+      "test/x11_property_change_waiter.h",
+    ]
   }
 }
 
