--- a/ui/gfx/BUILD.gn
+++ b/ui/gfx/BUILD.gn
@@ -82,6 +82,7 @@ component("gfx") {
     "font.h",
     "font_fallback.h",
     "font_fallback_linux.cc",
+    "font_fallback_linux.h",
     "font_fallback_mac.mm",
     "font_fallback_win.cc",
     "font_fallback_win.h",
