--- a/components/mus/gles2/BUILD.gn
+++ b/components/mus/gles2/BUILD.gn
@@ -24,6 +24,8 @@ source_set("gles2") {
     "command_buffer_local_client.h",
     "command_buffer_task_runner.cc",
     "command_buffer_task_runner.h",
+    "gl_helper.cc",
+    "gl_helper.h",
     "gl_surface_adapter.cc",
     "gl_surface_adapter.h",
     "gpu_impl.cc",
@@ -41,6 +43,7 @@ source_set("gles2") {
     "//base",
     "//components/mus/public/interfaces",
     "//gpu/command_buffer/client",
+    "//gpu/command_buffer/client:gles2_interface",
     "//gpu/command_buffer/common:gles2_utils",
     "//gpu/command_buffer/service",
     "//gpu/config:config",
