Pull gpu CmdBuf service/client shared GpuMemoryBuffer code to common
BUG=586380
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1849313002

Cr-Commit-Position: refs/heads/master@{#385554}

--- a/gpu/command_buffer/common/BUILD.gn
+++ b/gpu/command_buffer/common/BUILD.gn
@@ -41,6 +41,8 @@ source_set("common_sources") {
     "gles2_cmd_format_autogen.h",
     "gles2_cmd_ids.h",
     "gles2_cmd_ids_autogen.h",
+    "gpu_memory_buffer_support.cc",
+    "gpu_memory_buffer_support.h",
     "id_allocator.cc",
     "id_allocator.h",
     "id_type.h",
@@ -57,6 +59,11 @@ source_set("common_sources") {
   ]
 
   configs += [ "//gpu:gpu_implementation" ]
+
+  public_deps = [
+    "//ui/gfx:memory_buffer",
+    "//ui/gfx/geometry",
+  ]
 
   deps = [
     ":gles2_utils",
