Added placeholder VulkanRenderer class.
A VulkanRenderer class has been created which mostly contains place
holder stubs. The plumbing has been added which creates this Renderer
and as well as the interaction with the Vulkan Context Provider.

This patch also includes an inclusion of the Vulkan include files.
Previously these files were being included directly from "/usr/include",
however this has been problematic as soon as the Vulkan files were
interacting with other classes which depend on our local custom sysroot.
This should eventually go away when we include Vulkan properly in the
custom sysroot as well.

R=piman@chromium.org
BUG=582564 582564 582554
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1834403002

Cr-Commit-Position: refs/heads/master@{#385569}

--- a/cc/BUILD.gn
+++ b/cc/BUILD.gn
@@ -570,25 +570,15 @@ component("cc") {
   }
 
   if (enable_vulkan) {
-    deps += [ ":vulkan_cc" ]
-  }
-}
-
-if (enable_vulkan) {
-  source_set("vulkan_cc") {
-    include_dirs = [ "/usr/include" ]
-    sources = [
+    sources += [
       "output/vulkan_context_provider.h",
       "output/vulkan_in_process_context_provider.cc",
       "output/vulkan_in_process_context_provider.h",
+      "output/vulkan_renderer.cc",
+      "output/vulkan_renderer.h",
     ]
 
-    configs += [ "//build/config:precompiled_headers" ]
-    defines = [ "CC_IMPLEMENTATION=1" ]
-
-    deps = [
-      "//gpu/vulkan",
-    ]
+    deps += [ "//gpu/vulkan" ]
   }
 }
 
