Scaffolding for Android implementation of PaymentRequest.
This patch places ServiceRegistryAndroid in content/public/, so Chrome
can register Android-specific services for Mojo. ServiceRegistryAndroid
is a pure virtual interface, implemented by ServiceRegistryAndroidImpl
in content/browser/android/.

The first user of the Android-specific features of Mojo in Chrome is the
PaymentRequest service. This patch adds a skeleton implementation of
this service.

BUG=587995
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1831173002

Cr-Commit-Position: refs/heads/master@{#385647}

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -450,6 +450,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/metrics/UmaUtils.java",
   "java/src/org/chromium/chrome/browser/metrics/VariationsSession.java",
   "java/src/org/chromium/chrome/browser/metrics/WebappUma.java",
+  "java/src/org/chromium/chrome/browser/mojo/ChromeServiceRegistrar.java",
   "java/src/org/chromium/chrome/browser/multiwindow/MultiInstanceChromeTabbedActivity.java",
   "java/src/org/chromium/chrome/browser/multiwindow/MultiWindowUtils.java",
   "java/src/org/chromium/chrome/browser/net/qualityprovider/ExternalEstimateProviderAndroid.java",
@@ -566,6 +567,8 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/password_manager/AccountChooserDialog.java",
   "java/src/org/chromium/chrome/browser/password_manager/AutoSigninFirstRunDialog.java",
   "java/src/org/chromium/chrome/browser/password_manager/Credential.java",
+  "java/src/org/chromium/chrome/browser/payments/PaymentRequestDialog.java",
+  "java/src/org/chromium/chrome/browser/payments/PaymentRequestFactory.java",
   "java/src/org/chromium/chrome/browser/physicalweb/BitmapHttpRequest.java",
   "java/src/org/chromium/chrome/browser/physicalweb/ClearNotificationAlarmReceiver.java",
   "java/src/org/chromium/chrome/browser/physicalweb/HttpRequest.java",
