[Android] Rename junit_unittests to junit_unit_tests in GN.
BUG=577009
TBR=mikecase@chromium.org

Review URL: https://codereview.chromium.org/1866733003

Cr-Commit-Position: refs/heads/master@{#385656}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -282,7 +282,7 @@ group("both_gn_and_gyp") {
       "//content/shell/android:content_shell_apk",
       "//content/test:video_decode_accelerator_unittest",
       "//net/android:net_junit_tests",
-      "//testing/android/junit:junit_unittests",
+      "//testing/android/junit:junit_unit_tests",
       "//third_party/android_tools:uiautomator_java",
       "//third_party/errorprone:chromium_errorprone",
       "//third_party/smhasher:murmurhash3",
