--- a/cc/BUILD.gn
+++ b/cc/BUILD.gn
@@ -829,6 +829,7 @@ test("cc_unittests") {
     "layers/ui_resource_layer_unittest.cc",
     "layers/video_frame_provider_client_impl_unittest.cc",
     "layers/video_layer_impl_unittest.cc",
+    "layers/viewport_unittest.cc",
     "output/begin_frame_args_unittest.cc",
     "output/bsp_tree_unittest.cc",
     "output/delegating_renderer_unittest.cc",
