breakpad: fix GN build files for microdump_stackwalk
Some copy/paste error was causing breakpad executables like
microdump_stackwalk to be symlinked against dump_syms, which
is unrelated

BUG=601355
TBR=mark@chromium.org

Review URL: https://codereview.chromium.org/1866933002

Cr-Commit-Position: refs/heads/master@{#385738}

--- a/breakpad/BUILD.gn
+++ b/breakpad/BUILD.gn
@@ -217,10 +217,10 @@ if (!is_win) {
   } else {
     # Aliases for convenience.
     binary_symlink("microdump_stackwalk") {
-      binary_label = ":dump_syms($host_toolchain)"
+      binary_label = ":$target_name($host_toolchain)"
     }
     binary_symlink("minidump_stackwalk") {
-      binary_label = ":dump_syms($host_toolchain)"
+      binary_label = ":$target_name($host_toolchain)"
     }
     binary_symlink("minidump_dump") {
       binary_label = ":$target_name($host_toolchain)"
