MacViews: draw Mac combobox arrows
This CL adds Mac-specific combobox arrow drawing code to NativeThemeMac.

BUG=543683
TEST=adhoc
Build views_examples_with_content_exe and look at the Combobox page.

Review URL: https://codereview.chromium.org/1817613002

Cr-Commit-Position: refs/heads/master@{#385759}

--- a/ui/gfx/BUILD.gn
+++ b/ui/gfx/BUILD.gn
@@ -577,6 +577,10 @@ action("aggregate_vector_icons") {
     "--output_cc=" + rebase_path(vector_icons_cc_file, root_build_dir),
     "--output_h=" + rebase_path(vector_icons_h_file, root_build_dir),
   ]
+
+  if (is_mac) {
+    sources += [ "vector_icons/combobox_arrow_mac.icon" ]
+  }
 }
 
 # Looking for gfx_geometry? It's //ui/gfx/geometry:geometry
