Move content/common/gpu/client/{media files} => media/gpu/ipc/client
BUG=586388

Review URL: https://codereview.chromium.org/1860973002

Cr-Commit-Position: refs/heads/master@{#385763}

--- a/content/public/renderer/BUILD.gn
+++ b/content/public/renderer/BUILD.gn
@@ -34,6 +34,7 @@ source_set("renderer_sources") {
     "//content/renderer",
     "//gin",
     "//media",
+    "//media/gpu/ipc/client",
     "//net",
     "//ppapi/c",
     "//skia",
