--- a/content/renderer/BUILD.gn
+++ b/content/renderer/BUILD.gn
@@ -57,6 +57,8 @@ source_set("renderer") {
     "//jingle:jingle_glue",
     "//media",
     "//media/blink",
+    "//media/gpu/ipc/client",
+    "//media/gpu/ipc/common",
     "//media/midi",
     "//mojo/common",
     "//mojo/converters/geometry",
