--- a/headless/BUILD.gn
+++ b/headless/BUILD.gn
@@ -84,6 +84,7 @@ static_library("headless_lib") {
     "public/headless_browser.h",
     "public/headless_export.h",
     "public/headless_web_contents.h",
+    "public/util/maybe.h",
   ]
 
   deps = [
@@ -110,6 +111,19 @@ group("headless_tests") {
 
   deps = [
     ":headless_browsertests",
+    ":headless_unittests",
+  ]
+}
+
+test("headless_unittests") {
+  sources = [
+    "public/util/maybe_unittest.cc",
+  ]
+
+  deps = [
+    "//base/test:run_all_unittests",
+    "//base/test:test_support",
+    "//testing/gtest",
   ]
 }
 
