When using third-party authentication the host may need to use client certificates. The host currently doesn't handle the case that the certificate file gets updated when the host is running, in which case later session connection will fail due to outdated certificate.
This patch schedules host-restart when the cert folder (~/.pki/nssdb) is changed and restart the host when no client connection is established.

BUG=598819

Review URL: https://codereview.chromium.org/1838313002

Cr-Commit-Position: refs/heads/master@{#385801}

--- a/remoting/host/BUILD.gn
+++ b/remoting/host/BUILD.gn
@@ -271,6 +271,7 @@ if (is_mac) {  # TODO(GYP) Mac build of remoting host.
       "it2me/it2me_confirmation_dialog_proxy_unittest.cc",
       "it2me/it2me_native_messaging_host_unittest.cc",
       "linux/audio_pipe_reader_unittest.cc",
+      "linux/certificate_watcher_unittest.cc",
       "linux/unicode_to_keysym_unittest.cc",
       "linux/x_server_clipboard_unittest.cc",
       "local_input_monitor_unittest.cc",
