--- a/ui/ozone/ozone.gni
+++ b/ui/ozone/ozone.gni
@@ -41,22 +41,21 @@ declare_args() {
       ozone_platform_cast = true
 
       # For visual desktop Chromecast builds, override the default "headless"
-      # platform with --ozone-platform=egltest
+      # platform with --ozone-platform=x11.
       # TODO(halliwell): Create a libcast_graphics implementation for desktop
-      # using X11, and disable these two platforms.
+      # using X11, and disable this platform.
       if (is_cast_desktop_build && !disable_display) {
-        ozone_platform_egltest = true
-        ozone_platform_ozonex = true
+        ozone_platform_x11 = true
       } else {
         ozone_platform = "cast"
       }
     } else if (is_chromeos) {
       ozone_platform_gbm = true
-      ozone_platform_egltest = true
+      ozone_platform_x11 = true
     } else {
       # Build all platforms whose deps are in install-build-deps.sh.
       # Only these platforms will be compile tested by buildbots.
-      ozone_platform_egltest = true
+      ozone_platform_x11 = true
     }
   }
 }
